# agentic-ai-native-software-development

./: .gitignore  GEMINI.md
.gemini/: settings.json
backend/: .dockerignore  .env  Dockerfile  README.md  main.py  pyproject.toml  pyproject.toml.aasa  requirements.txt  test.db  vercel.json
backend/alembic/: env.py
backend/alembic/versions/: 2d2e9c399283_create_scenarios_table.py
backend/src/: database.py  error_handling.py  logging_config.py  main.py
backend/src/api/: review.py  scenarios.py  simulate.py  websockets.py
backend/src/models/: api.py  base.py  gemini.py  scenario.py  simulation.py
backend/src/services/: simulation_service.py
backend/src/sim_agents/: architecture_editor.py  architecture_planner.py  failure_simulation.py  observability_narrative.py  scenario_interpreter.py  simulation_reviewer_agent.py  tool_skill_mapper.py
book-source/: .gitignore  Dockerfile  babel.config.js  components.json  docusaurus.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
book-source/src/components/: AddNodeModal.tsx  Footer.tsx  GraphEditToolbar.tsx  NaturalLanguageEditBox.tsx  ReflectionExplanationSidePanel.tsx  ScenarioFeedbackScoring.tsx  ScenarioInputPanel.test.tsx  ScenarioInputPanel.tsx  SemanticCanvas.tsx  SimulationPanel.tsx  TopBarControls.tsx
book-source/src/css/: custom.css  (+1 more)
specs/001-ai-native-playground/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
specs/002-scenario-backend/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/book/: chapter-index.md
(+18 files in other folders)
