[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Muhammad-Saifullah50 <saifullahm2005@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.121.1"
uvicorn = "^0.38.0"
sqlalchemy = "^2.0.44"
psycopg2-binary = "^2.9.11"
alembic = "^1.17.1"
openai = "^2.7.1"
websockets = "^15.0.1"
openai-agents = "^0.5.0"
python-dotenv = "^0.21.0"
loguru = "^0.7.2"


[tool.poetry.group.dev.dependencies]
black = "^25.9.0"
ruff = "^0.14.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.ruff]
line-length = 120
select = ["E", "F", "W", "I", "N", "D", "UP", "YTT", "ANN", "ASYNC", "BLE", "B", "A", "C4", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "Q", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
ignore = ["D100", "D104", "D105", "D107"] # Ignore missing docstrings for modules, packages, functions, and __init__
